--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,17 @@ keycloak.auth-server-url=http://localhost:8080/
 keycloak.realm=ias
 keycloak.resource=ias-client
 keycloak.bearer-only=true
+
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/ias_db
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Properties
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
