--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernate Properties
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-#spring.sql.init.mode=always
+spring.sql.init.mode=always
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
