--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=bhumitbhashit@gmail.com
-spring.mail.password=password
+spring.mail.password=sfse qcbo ltct uyql
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
