--- a/.env
+++ b/.env
@@ -1,14 +1,9 @@
 # .env file for IAS Management Backend
 
 # Database Configuration (PostgreSQL)
-; DB_URL=jdbc:postgresql://localhost:5434/ias_db
-; DB_USERNAME=postgres
-; DB_PASSWORD=password
-; DB_DRIVER=org.postgresql.Driver
-
-DB_URL=jdbc:postgresql://ep-silent-darkness-a14hhmkb-pooler.ap-southeast-1.aws.neon.tech/neondb
-DB_USERNAME=neondb_owner
-DB_PASSWORD=npg_tWgc4D8bOYpi
+DB_URL=jdbc:postgresql://localhost:5434/ias_db
+DB_USERNAME=postgres
+DB_PASSWORD=password
 DB_DRIVER=org.postgresql.Driver
 
 # Email Configuration
